--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-auth-users",
+  "name": "simple-crud",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,11 +14,11 @@
     "json-server": "^0.17.0",
     "mobx": "^6.4.2",
     "mobx-react-lite": "^3.3.0",
-    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "sass": "^1.53.0",
     "typescript": "^4.4.2",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
