--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/uuid": "^8.3.4",
     "axios": "^0.26.1",
     "json-server": "^0.17.0",
     "mobx": "^6.4.2",
@@ -46,9 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/uuid": "8.3.2",
-    "prettier": "^2.5.1"
   }
 }
